feat: add AI-generated gallery images (2/4 done)

--- a/public/index.html
+++ b/public/index.html
@@ -70,16 +70,16 @@
         <div class="container">
             <h2>Unsere Werke</h2>
             <div class="gallery-grid">
-                <div class="gallery-item" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%)">
+                <div class="gallery-item" style="background-image: url('/images/gallery-1.png'); background-size: cover; background-position: center;">
                     <span>Kindergeburtstag</span>
                 </div>
-                <div class="gallery-item" style="background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%)">
+                <div class="gallery-item" style="background-image: url('/images/gallery-2.png'); background-size: cover; background-position: center;">
                     <span>Sweet 16</span>
                 </div>
-                <div class="gallery-item" style="background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%)">
+                <div class="gallery-item" style="background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%);">
                     <span>Erwachsenen-Party</span>
                 </div>
-                <div class="gallery-item" style="background: linear-gradient(135deg, #43e97b 0%, #38f9d7 100%)">
+                <div class="gallery-item" style="background: linear-gradient(135deg, #43e97b 0%, #38f9d7 100%);">
                     <span>Outdoor Events</span>
                 </div>
             </div>
