feat: all 4 gallery images live (AI-generated with DALL-E 3)

--- a/public/index.html
+++ b/public/index.html
@@ -76,10 +76,10 @@
                 <div class="gallery-item" style="background-image: url('/images/gallery-2.png'); background-size: cover; background-position: center;">
                     <span>Sweet 16</span>
                 </div>
-                <div class="gallery-item" style="background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%);">
+                <div class="gallery-item" style="background-image: url('/images/gallery-3.png'); background-size: cover; background-position: center;">
                     <span>Erwachsenen-Party</span>
                 </div>
-                <div class="gallery-item" style="background: linear-gradient(135deg, #43e97b 0%, #38f9d7 100%);">
+                <div class="gallery-item" style="background-image: url('/images/gallery-4.png'); background-size: cover; background-position: center;">
                     <span>Outdoor Events</span>
                 </div>
             </div>
